<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cocktail</string>
    <string name="info1">Choisissez vos softs disponibles :</string>
    <string name="info2">Choisissez vos alcools disponibles :</string>
    <string name="titreMain">VOTRE PLACARD</string>
    <string name="space"></string>
    <string name="boutonConsult">Que réaliser ?</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_proposition_">Proposition_Activity</string>
    <string name="image_content_description">test</string>
    <string name="titreProp">VOS COCKTAILS RÉALISABLES</string>
    <string name="nomCocktail1">Le Bibi Maggle</string>
    <string name="descCocktail1">Du Rhum, des femmes et de la bière nom de dieu !</string>
    <string name="boutonRetour">Retour</string>

</resources>
